# qiyas

./: .pylintrc  CHANGELOG.md  MANIFEST.in  README.md  dev.py  generate_qs.py  run_dev.py  rundev.py  setup.cfg  wheelit.ps1
.github/workflows/: pylint.yml  pytest.yml
docs/source/: conf.py  index.rst
qiyas/: __init__.py  convertor.py  generator.py  graph.py
qiyas/construction/: graph.py  reader.py
qiyas/conversion/: convertor.py  reader.py
qiyas/unit_graphs/: distance.qs  length.qs  mass.qs  volume.qs
qiyas/unit_tables/: distance_conversions.csv  distance_names.csv  mass_names.csv
scripts/: coverage.ps1  dev.ps1  generate_qs.ps1  generate_qs.py
tests/: test_construction.py  test_conversion.py  test_convertor.py  test_generators.py  test_graph.py  test_readers.py  test_reading.py
tests/data/unit_graphs/: mass.qs  volume.qs
