[metadata]
name         = qiyas
author       = Mustafa A. Al Ibrahim
author_email = mustafa.geoscientist@outlook.com
email        = mustafa.geoscientist@outlook.com
url          = https://www.linkedin.com/in/mosgeo
version = 1.0.0
description = qiyas - A non-opinionated unit conversion Python library for scientists and engineers
long_description = file: README.md, CHANGELOG.md, LICENSE
classifiers =
    Framework :: NetworkX
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = qiyas
include_package_data=True
install_requires =
    networkx

[options.extras_require]
dev =
    build
