[metadata]
name         = qiyas
author       = Mustafa A. Al Ibrahim
author_email = mustafa.geoscientist@outlook.com
email        = mustafa.geoscientist@outlook.com
url          = https://www.linkedin.com/in/mosgeo
version = 0.1.0
description = qiyas - A non-opinionated customizable unit conversion Python library
long_description = file: README.md, CHANGELOG.md, LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages = qiyas
include_package_data=True
install_requires =
    networkx
    varname

[options.extras_require]
dev =
    build
    pylint
    pytest
    coverage
    mypy
    black
